2004-04-05 Niklas Knutsson  <nq@altern.org>

	* MatrixArgument->type should not return TEXT_ARGUMENT
	* Multiple roots updates

2004-04-04 Niklas Knutsson  <nq@altern.org>

	* Put in some restrictions and enable multiple roots
	* Disable multiple roots
	* Remove 0 == any number from Manager->equals
	* try x^(y+z) = x^y*x^z and x^(yz) = x^y^z

2004-04-03 Niklas Knutsson  <nq@altern.org>

	* Capitulate in search for exact as long as possible to fix alternatives
	* Recalculate directly on angle unit change
	* Enable multiple roots again
	* Do not ignore unsolvable comparison
	* Remove imaginary or real part present because of approximate floating point numbers
	* Do not display errors for arguments in exact precalculation
	* Do not display extra trailing zeros
	* Make comparison between floats in lower precision (but not less than user defined precision)
	* Fix printing of toplevel negative complex number
	* Return -(x^(1/3)) for (-x)^(1/3)

2004-04-02 Niklas Knutsson  <nq@altern.org>

	* Remove integrate parts that does not work
	* Do not crash on i^4
	* Disable broken multiple roots

2004-04-01 Niklas Knutsson  <nq@altern.org>

	* Hyperbolic and inverse does not take angle arguments
	* Fix raise by matrix
	* Fix raise by alternatives
	* Fix drawing of function

2004-03-31 Niklas Knutsson  <nq@altern.org>

	* More solve work
	* Fix sorting of alternatives
	* Fix wrong add alternatives to alternatives logic
	* Clean after multiplication raise... (serious bug)
	* Quadratic equations
	* Non-giac solve function and automatic "solving" of comparisons
	* Better comparison equals printing
	* Minimal non-giac integrate function

2004-03-30 Niklas Knutsson  <nq@altern.org>

	* Finance -> Economics/Finance
	* Demand Elasticity function
	* Fix that all arguments wanted text after function editing
	* Free temporary composite units
	* Fix sin(x)/tan(x)
	* No (+ -) in printing with complex numbers
	* Fix sorting of complex numbers

2004-03-29 Niklas Knutsson  <nq@altern.org>
