@@ -286,6 +286,7 @@ void on_menu_item_about_activate(GtkMenuItem *w, gpointer user_data);
 void on_menu_item_help_activate(GtkMenuItem *w, gpointer user_data);
 
 void on_precision_dialog_spinbutton_precision_value_changed(GtkSpinButton *w, gpointer user_data);
+void on_precision_dialog_button_recalculate_clicked(GtkButton *w, gpointer user_data);
 void on_decimals_dialog_spinbutton_max_value_changed(GtkSpinButton *w, gpointer user_data);
 void on_decimals_dialog_spinbutton_min_value_changed(GtkSpinButton *w, gpointer user_data);
 void on_decimals_dialog_checkbutton_max_toggled(GtkToggleButton *w, gpointer user_data);
